fix(calculator): 커스텀 구분자 처리 로직 개선
- StringSplitter에서 "\\n"을 올바르게 처리하도록 수정
- InputValidator에서 커스텀 구분자 검증 로직 강화
- StringCalculatorService에서 커스텀 구분자 처리 방식 변경